--- a/index.html
+++ b/index.html
@@ -211,11 +211,11 @@
   }
 
   if (total <= 30) {
-    feedback += "✅ **위험 없음**\n현재 사용자의 SNS 활용 습관은 비교적 건강한 편입니다. 감정 고립이나 과도한 비교 경향이 낮으며, 자기 조절력이 있는 상태로 보입니다. 다만, 주기적인 자가 점검을 통해 사용 습관을 점검하고, 오프라인 활동을 꾸준히 유지하는 것이 좋습니다.";
+    feedback += "✅ 위험 없음\n현재 사용자의 SNS 활용 습관은 비교적 건강한 편입니다. 감정 고립이나 과도한 비교 경향이 낮으며, 자기 조절력이 있는 상태로 보입니다. 다만, 주기적인 자가 점검을 통해 사용 습관을 점검하고, 오프라인 활동을 꾸준히 유지하는 것이 좋습니다.";
   } else if (total <= 45) {
-    feedback += "⚠️ **주의 요망**\n현재 SNS 사용이 정서적 부담이나 스트레스를 유발할 가능성이 있습니다. 무의식적인 사용 습관, 감정적 고립감, 타인과의 비교가 복합적으로 작용할 수 있습니다.\n\n✅ **해결 방법**:\n- 하루 중 SNS 사용 시간을 정해놓고 사용하기\n- 하루 10~30분의 '디지털 디톡스' 시간 마련하기\n- SNS 이외의 활동(산책, 독서, 대화 등)으로 감정 균형 찾기\n- SNS에서 부정적 감정을 유발하는 계정은 팔로우 해제하는 것도 도움이 됩니다.";
+    feedback += "⚠️ 주의 요망\n현재 SNS 사용이 정서적 부담이나 스트레스를 유발할 가능성이 있습니다. 무의식적인 사용 습관, 감정적 고립감, 타인과의 비교가 복합적으로 작용할 수 있습니다.\n\n해결 방법:\n- 하루 중 SNS 사용 시간을 정해놓고 사용하기\n- 하루 10~30분의 '디지털 디톡스' 시간 마련하기\n- SNS 이외의 활동(산책, 독서, 대화 등)으로 감정 균형 찾기\n- SNS에서 부정적 감정을 유발하는 계정은 팔로우 해제하는 것도 도움이 됩니다.";
   } else {
-    feedback += "🚨 **고위험 상태**\n현재 SNS 사용이 정서적 웰빙에 심각한 영향을 미칠 가능성이 높습니다.\n\n🔴 **왜 고위험인가요?**\n- SNS 사용 습관이 일상생활을 방해할 정도로 자리잡고 있고\n- 진정한 감정 소통이 부족하여 외로움이 심화되며\n- 타인과의 비교로 인해 자존감이 지속적으로 저하되고 있습니다.\n\n🧠 **가능한 증상**:\n- 수면 부족, 집중력 저하\n- 자기비하 또는 무기력감\n- 감정 표현의 위축\n- 주변 인간관계의 단절감\n\n✅ **해결 방법**:\n- SNS 앱을 일정 시간 강제로 차단하는 도구 활용\n- 나를 있는 그대로 수용할 수 있는 오프라인 모임 또는 상담 참여\n- 감정을 글이나 말로 표현해 보는 정서 일기 시도\n- 필요 시, 심리상담 전문가와의 상담을 권장드립니다.";
+    feedback += "🚨 고위험 상태\n현재 SNS 사용이 정서적 웰빙에 심각한 영향을 미칠 가능성이 높습니다.\n\n🔴 왜 고위험인가요?\n- SNS 사용 습관이 일상생활을 방해할 정도로 자리잡고 있고\n- 진정한 감정 소통이 부족하여 외로움이 심화되며\n- 타인과의 비교로 인해 자존감이 지속적으로 저하되고 있습니다.\n\n🧠 가능한 증상:\n- 수면 부족, 집중력 저하\n- 자기비하 또는 무기력감\n- 감정 표현의 위축\n- 주변 인간관계의 단절감\n\n✅ 해결 방법:\n- SNS 앱을 일정 시간 강제로 차단하는 도구 활용\n- 나를 있는 그대로 수용할 수 있는 오프라인 모임 또는 상담 참여\n- 감정을 글이나 말로 표현해 보는 정서 일기 시도\n- 필요 시, 심리상담 전문가와의 상담을 권장드립니다.";
   }
 
   document.getElementById("result").textContent = feedback;
