--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         text-align: center;
         background: #f5f7fa;
         color: #333;
+        font-family: 'Arial', sans-serif;
+        padding: 20px;
+        max-width: 800px;
+        margin: auto;
     }
     h1, h2 {
         color: #2c3e50;
@@ -19,41 +23,52 @@
         border-radius: 10px;
         padding: 20px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+        margin-bottom: 30px;
     }
     .question {
         text-align: center;
-        padding: 10px;
-        border-bottom: 1px solid #eee;
+         margin-bottom: 15px;
+      border-bottom: 1px solid #eee;
+      padding-bottom: 10px;
     }
     .question:last-child {
         border-bottom: none;
     }
     label {
         display: inline-block;
-        margin: 0 8px 0 0;
+         margin-right: 10px;
     }
     button {
-        background-color: #3498db;
+        background-color: #00E676;
         color: white;
         border: none;
         border-radius: 5px;
         cursor: pointer;
         font-size: 16px;
+        padding: 10px 20px;
+        margin-top: 20px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
     button:hover {
-        background-color: #2980b9;
+        background-color: #00C853;
     }
     .result {
-    background #e8f4fd;
+    background #e8f5e9;
     padding: 20px;
     border-radius: 8px;
-    border-left: 5px solid #3498db;
+    border-left: 5px solid #00E676;
     font-size: 1rem;
     line-height: 1.8;
     text-align: left;
+    font-weight: bold;
+    font-size: 1.2em;
+    color: #2e7d32;
+    margin-top: 30px;
   }
   .result strong {
-    color: #2c3e50;
+    color:  #1b5e20;
   }
   .result span.title {
     font-size: 1.1rem;
