--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
         text-align: center;
         background: #f5f7fa;
-        color: #333;
+        color:#000000;
         font-family: 'Arial', sans-serif;
         padding: 20px;
         max-width: 800px;
@@ -19,7 +19,7 @@
         color: #2c3e50;
     }
     .section {
-        background: #ffffff;
+        background: #f0f0f0;
         border-radius: 10px;
         padding: 20px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
@@ -28,8 +28,9 @@
     .question {
         text-align: center;
          margin-bottom: 15px;
-      border-bottom: 1px solid #eee;
+      border-bottom: 1px solid  #ddd;
       padding-bottom: 10px;
+      color: #000000; 
     }
     .question:last-child {
         border-bottom: none;
@@ -55,26 +56,27 @@
         background-color: #00C853;
     }
     .result {
-    background #e8f5e9;
+    background #f0f0f0;
     padding: 20px;
     border-radius: 8px;
-    border-left: 5px solid #00E676;
+    border-left: 5px solid #2e7d32;
     font-size: 1rem;
     line-height: 1.8;
     text-align: left;
     font-weight: bold;
     font-size: 1.2em;
     color: #2e7d32;
-    margin-top: 30px;
+    margin-top: #000000;
   }
   .result strong {
-    color:  #1b5e20;
+    color:  #000000;
   }
   .result span.title {
     font-size: 1.1rem;
     font-weight: bold;
     display: block;
     margin-top: 15px;
+    color: #000000;
   }
     body {
         text-align: center; font-family: Arial, sans-serif; padding: 20px; max-width: 800px; margin: auto; }
