--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     body {
         text-align: center;
-        background: #f5f7fa;
+        background: #c0c0c0;
         color:#000000;
         font-family: 'Arial', sans-serif;
         padding: 20px;
@@ -19,7 +19,7 @@
         color: #2c3e50;
     }
     .section {
-        background: #f0f0f0;
+        background: #ffffff;
         border-radius: 10px;
         padding: 20px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
@@ -40,7 +40,7 @@
          margin-right: 10px;
     }
     button {
-        background-color: #00E676;
+        background-color: #006400;
         color: white;
         border: none;
         border-radius: 5px;
@@ -53,13 +53,13 @@
         margin-right: auto;
     }
     button:hover {
-        background-color: #00C853;
+        background-color: #000000;
     }
     .result {
-    background #f0f0f0;
+    background #c0c0c0;
     padding: 20px;
     border-radius: 8px;
-    border-left: 5px solid #2e7d32;
+    border-left: 5px solid #006400;
     font-size: 1rem;
     line-height: 1.8;
     text-align: left;
@@ -69,7 +69,7 @@
     margin-top: #000000;
   }
   .result strong {
-    color:  #000000;
+    color:  #006400;
   }
   .result span.title {
     font-size: 1.1rem;
