--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <style>
     body {
         text-align: center;
-        background: #c0c0c0;
+        background: #sec584;
         color:#000000;
         font-family: 'Arial', sans-serif;
         padding: 20px;
