--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         text-align: center; margin-bottom: 15px; }
     label {
         display: inline-block; margin-right: 10px; }
-    .result { font-weight: bold; font-size: 1.2em; color: darkblue; margin-top: 30px; }
+    .result { font-weight: bold; font-size: 1.2em; color: black; margin-top: 30px; }
     button { padding: 10px 20px; margin-top: 20px; display: block; margin-left: auto; margin-right: auto; }
   </style>
 </head>
